WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12805
REGRESSION: suggestion popup has a disabled scroll bar
https://bugs.webkit.org/show_bug.cgi?id=12805
Summary
REGRESSION: suggestion popup has a disabled scroll bar
Alexey Proskuryakov
Reported
2007-02-18 05:09:34 PST
Steps to reproduce: 1. Type something (for example, in a text field Bugzilla). The text should be short, to allow a lot of possible completions. 2. Press F5. Results: a suggestion popup appears, but its scroll bar has a disabled look (though it does work).
Attachments
Force controls in the popup to appear active and eliminate some console spew
(2.04 KB, patch)
2007-02-21 08:06 PST
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-20 08:33:01 PST
AFAICT this is a regression only in the sense that in TOT it happens in text controls since they are engine-based. In editable HTML, the behavior is the same in Safari 2.0.4 (and in shipping Mail).
mitz
Comment 2
2007-02-21 08:06:13 PST
Created
attachment 13297
[details]
Force controls in the popup to appear active and eliminate some console spew
Mark Rowe (bdash)
Comment 3
2007-02-21 23:58:38 PST
Comment on
attachment 13297
[details]
Force controls in the popup to appear active and eliminate some console spew r=me
Sam Weinig
Comment 4
2007-02-22 07:46:08 PST
Landed in
r19789
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug