        Reviewed by Mark (age 21).

- fix http://bugs.webkit.org/show_bug.cgi?id=12805
          REGRESSION: suggestion popup has a disabled scroll bar

        * WebView/WebHTMLView.mm:
        (-[WebTextCompleteController _buildUI]): Uncommented the call to the NSWindow
        SPI that forces the scroll bar to look active. Also replaced a call to
        the deprecated NSTableView method setAutoresizesAllColumnsToFit: with
        the new method setColumnAutoresizingStyle: to eliminate console spew.



Canonical link: https://commits.webkit.org/16641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19789 268f45cc-cd09-0410-ab3c-d52691b4dbfc